<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Note</string>
    <string name="action_settings">Settings</string>
    <string name="Login"> Логин </string>
    <string name="Registration"> Регистрация</string>
    <string name="login_text_view">Введите логин или пароль</string>
    <string name="button_enter">Сохранить</string>
    <string name="registration_text_view">Регистрация пользователя</string>
    <string name="login_edit_text">Логин</string>
    <string name="password_edit_text">Пароль</string>
    <string name="reenter_passwod_edit_text">Повторите пароль</string>
    <string name="old_password_edit_text">Старый пароль</string>
    <string name="new_passwor_edit_text">Новый пароль</string>
    <string name="action_addNoteIcon">Добавить заметку</string>
    <string name="action_changePassword">Сменить пароль</string>
    <string name="action_delete">Удалить</string>
    <string name="action_logOut">Выйти</string>
    <string name="titleNote">Заголовок</string>
    <string name="textNote">Текст</string>
    <string name="save_new_note">Сохранить</string>
    <string name="RandomNotes">5 авто заметок</string>
    <string name="ButtonBack">Отмена</string>

</resources>