<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/changePassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/oldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marging_top"
        android:ems="10"
        android:hint="@string/old_password_edit_text"
        android:inputType="textPassword"
        android:textSize="@dimen/text_size_edit_text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marging_top"
        android:ems="10"
        android:hint="@string/new_passwor_edit_text"
        android:inputType="textPassword"
        android:textSize="@dimen/text_size_edit_text" />

    <EditText
        android:id="@+id/reenterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marging_top"
        android:ems="10"
        android:hint="@string/reenter_passwod_edit_text"
        android:inputType="textPassword"
        android:textSize="@dimen/text_size_edit_text" />

    <Button
        android:id="@+id/buttonEnterChenge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marging_top"
        android:text="@string/button_enter"
        android:textSize="@dimen/text_size_text_view" />

</LinearLayout>