<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/newNote"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/titleNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/titleNote"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/textNote"
        style=""
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/textNote"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textNote"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/RandomNotes" />

</LinearLayout>